fix overflow corousel::trainer

--- a/style.css
+++ b/style.css
@@ -611,6 +611,13 @@ hr {
         flex-direction: column;
         align-items: center;
     }
+
+    .overflowHandler {
+        overflow-x: hidden;
+        width: 100vw;
+        height: max-content;
+        display: flex;
+    }
     
     .headerDesc3 {
         display: flex;
@@ -651,10 +658,9 @@ hr {
         justify-content: space-between;
         margin-bottom: 80px;
         width: max-content;
-        overflow-x: hidden;
         gap: 30px;
-        -webkit-animation: move 10s infinite linear alternate;
-        animation: move 10s infinite linear alternate;
+        -webkit-animation: move 7s infinite linear alternate;
+        animation: move 7s infinite linear alternate;
       }
       
       #box:hover {
@@ -664,19 +670,19 @@ hr {
       
       @-webkit-keyframes move {
         0% {
-            margin-left: 57vw;
+            margin-left: 8vw;
         }
         100% {
-            margin-left: -57vw;
+            margin-left: -54vw;
         }
       }
       
       @keyframes move {
         0% {
-          margin-left: 57vw;
+          margin-left: 8vw;
         }
         100% {
-          margin-left: -57vw;
+          margin-left: -54vw;
         }
       }      
 
